change sentence in about sectin

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 <div class="section-heading">
                     <h1>Web Developer & Digital Consultant</h1>
-                    <h2>Helping businesses grow with cutting-edge web solutions</h2>
+                    <h2>Empowering businesses with cutting-edge digital solutions to enhance their online presence, streamline operations, and drive sustainable growth in an ever-evolving digital landscape.</h2>
                 </div>
 
 
