change sentence in about sectin

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="section-heading">
                         <h3>SUCCESS</h3>
                         <h2 class="section-title">What do I offer</h2>
-                        <p class="section-subtitle">Helping businesses leverage digital solutions for growth and success.</p>
+                        <p class="section-subtitle">Empowering businesses with cutting-edge digital solutions to enhance their online presence, streamline operations, and drive sustainable growth in an ever-evolving digital landscape.</p>
                     </div>
 
                 </div>
